--- a/index.html
+++ b/index.html
@@ -1,45 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single-page design portfolio</title>
-</head>
-<body>
-
-  Free Consultation
-
-  Design solutions made easy
-
-  With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
-
-  Graphic Design
-  UI/UX
-  Apps
-  Photography
-  Illustrations
-  Motion Graphics
-
-  I’m Amy, and I’d love to work on your next project
-
-  I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
-  to complete mobile apps. I’m also handy with a camera!
-
-  Free Consultation
-
-  My Work
-
-  Book a call with me
-
-  I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a 
-  free consultation. Then we can move forward from there.
-
-  Free Consultation
-
-  Free Consultation
-
-</body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <script src="bootstrap-5.3.2-dist/css/bootstrap.min.css"></script>
+    <script src="bootstrap-5.3.2-dist//js/bootstrap.bundle.min.js"></script>
+    <script src="jquery/jquery-3.7.1.min.js"></script>
+    <title>Frontend Mentor | Single-page design portfolio</title>
+  </head>
+  <body>
+    Free Consultation Design solutions made easy With over ten years of
+    experience in various design disciplines, I’m your one-stop shop for your
+    design needs. Graphic Design UI/UX Apps Photography Illustrations Motion
+    Graphics I’m Amy, and I’d love to work on your next project I love working
+    with others to create beautiful design solutions. I’ve designed everything
+    from brand illustrations to complete mobile apps. I’m also handy with a
+    camera! Free Consultation My Work Book a call with me I’d love to have a
+    chat to see how I can help you. The best first step is for us to discuss
+    your project during a free consultation. Then we can move forward from
+    there. Free Consultation Free Consultation
+  </body>
 </html>
