--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="bootstrap-5.3.2-dist/css/bootstrap.min.css"></script>
     <script src="bootstrap-5.3.2-dist//js/bootstrap.bundle.min.js"></script>
     <script src="jquery/jquery-3.7.1.min.js"></script>
-    <title>Frontend Mentor | Single-page design portfolio</title>
+    <title>Single-page design portfolio</title>
   </head>
   <body>
     Free Consultation Design solutions made easy With over ten years of
