--- a/index.html
+++ b/index.html
@@ -10,21 +10,33 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-    <script src="bootstrap-5.3.2-dist/css/bootstrap.min.css"></script>
-    <script src="bootstrap-5.3.2-dist//js/bootstrap.bundle.min.js"></script>
-    <script src="jquery/jquery-3.7.1.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="./bootstrap-5.3.2-dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    ></script>
     <title>Single-page design portfolio</title>
   </head>
   <body>
-    Free Consultation Design solutions made easy With over ten years of
-    experience in various design disciplines, I’m your one-stop shop for your
-    design needs. Graphic Design UI/UX Apps Photography Illustrations Motion
-    Graphics I’m Amy, and I’d love to work on your next project I love working
-    with others to create beautiful design solutions. I’ve designed everything
-    from brand illustrations to complete mobile apps. I’m also handy with a
-    camera! Free Consultation My Work Book a call with me I’d love to have a
-    chat to see how I can help you. The best first step is for us to discuss
-    your project during a free consultation. Then we can move forward from
-    there. Free Consultation Free Consultation
+    <button>Free Consultation</button>
+    <h1 class="bg-primary text-secondary">Design solutions made easy</h1>
+    <h2>
+      With over ten years of experience in various design disciplines, I’m your
+      one-stop shop for your design needs.
+    </h2>
+    Graphic Design UI/UX Apps Photography Illustrations Motion Graphics I’m Amy,
+    and I’d love to work on your next project I love working with others to
+    create beautiful design solutions. I’ve designed everything from brand
+    illustrations to complete mobile apps. I’m also handy with a camera! Free
+    Consultation My Work Book a call with me I’d love to have a chat to see how
+    I can help you. The best first step is for us to discuss your project during
+    a free consultation. Then we can move forward from there. Free Consultation
+    Free Consultation
+    <script src="./bootstrap-5.3.2-dist//js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
