--- a/index.html
+++ b/index.html
@@ -23,20 +23,63 @@
     <title>Single-page design portfolio</title>
   </head>
   <body>
-    <button>Free Consultation</button>
-    <h1 class="bg-primary text-secondary">Design solutions made easy</h1>
-    <h2>
-      With over ten years of experience in various design disciplines, I’m your
-      one-stop shop for your design needs.
-    </h2>
-    Graphic Design UI/UX Apps Photography Illustrations Motion Graphics I’m Amy,
-    and I’d love to work on your next project I love working with others to
-    create beautiful design solutions. I’ve designed everything from brand
-    illustrations to complete mobile apps. I’m also handy with a camera! Free
-    Consultation My Work Book a call with me I’d love to have a chat to see how
-    I can help you. The best first step is for us to discuss your project during
-    a free consultation. Then we can move forward from there. Free Consultation
-    Free Consultation
+    <nav class="bg-primary p-3">
+      <button>Free Consultation</button>
+    </nav>
+    <header class="p-3 text-center">
+      <h1>Design solutions made easy</h1>
+      <p>
+        With over ten years of experience in various design disciplines, I’m
+        your one-stop shop for your design needs.
+      </p>
+    </header>
+
+    <div class="p-3">
+      <div class="skill-div rounded bg-info" id="skill-1">
+        <h2>Graphic Design</h2>
+      </div>
+      <div class="skill-div rounded bg-info" id="skill-2"><h2>UI/UX</h2></div>
+      <div class="skill-div rounded bg-info" id="skill-3"><h2>Apps</h2></div>
+      <div class="skill-div rounded bg-info" id="skill-4">
+        <h2>Photography</h2>
+      </div>
+      <div class="skill-div rounded bg-info" id="skill-5">
+        <h2>Illustrations</h2>
+      </div>
+      <div class="skill-div rounded bg-info" id="skill-6">
+        <h2>Motion Graphics</h2>
+      </div>
+    </div>
+
+    <div class="p-3 text-center">
+      <h2>I’m Amy, and I’d love to work on your next project</h2>
+      <p>
+        I love working with others to create beautiful design solutions. I’ve
+        designed everything from brand illustrations to complete mobile apps.
+        I’m also handy with a camera!
+      </p>
+      <button>Free Consultation</button>
+    </div>
+
+    <div>
+      <h2 class="p-3 text-center">My Work</h2>
+      <p>Carousel</p>
+    </div>
+
+    <div class="p-3 text-center">
+      <h2>Book a call with me</h2>
+      <p>
+        I’d love to have a chat to see how I can help you. The best first step
+        is for us to discuss your project during a free consultation. Then we
+        can move forward from there.
+      </p>
+      <button>Free Consultation</button>
+    </div>
+
+    <footer class="bg-primary p-3">
+      <button>Free Consultation</button>
+    </footer>
+
     <script src="./bootstrap-5.3.2-dist//js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
