--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
+
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="./bootstrap-5.3.2-dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
     />
-    <script
-      src="./bootstrap-5.3.2-dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    ></script>
+
+    <link href="style.css" rel="stylesheet" />
+
     <title>Single-page design portfolio</title>
   </head>
+
   <body>
-    <nav class="bg-primary p-3">
-      <button>Free Consultation</button>
+    <nav class="bg-primary p-3 d-flex justify-content-between">
+      <img src="assets/logo.svg" />
+      <button type="button" class="btn rounded-pill btn-black">
+        Free Consultation
+      </button>
     </nav>
     <header class="p-3 text-center">
       <h1>Design solutions made easy</h1>
@@ -35,18 +37,22 @@
     </header>
 
     <div class="p-3">
-      <div class="skill-div rounded bg-info" id="skill-1">
+      <div class="skill-div p-3 rounded text-white" id="skill-1">
         <h2>Graphic Design</h2>
       </div>
-      <div class="skill-div rounded bg-info" id="skill-2"><h2>UI/UX</h2></div>
-      <div class="skill-div rounded bg-info" id="skill-3"><h2>Apps</h2></div>
-      <div class="skill-div rounded bg-info" id="skill-4">
+      <div class="skill-div p-3 rounded text-white" id="skill-2">
+        <h2>UI/UX</h2>
+      </div>
+      <div class="skill-div p-3 rounded text-white" id="skill-3">
+        <h2>Apps</h2>
+      </div>
+      <div class="skill-div p-3 rounded text-white" id="skill-4">
         <h2>Photography</h2>
       </div>
-      <div class="skill-div rounded bg-info" id="skill-5">
+      <div class="skill-div p-3 rounded text-white" id="skill-5">
         <h2>Illustrations</h2>
       </div>
-      <div class="skill-div rounded bg-info" id="skill-6">
+      <div class="skill-div p-3 rounded text-white" id="skill-6">
         <h2>Motion Graphics</h2>
       </div>
     </div>
@@ -58,7 +64,9 @@
         designed everything from brand illustrations to complete mobile apps.
         I’m also handy with a camera!
       </p>
-      <button>Free Consultation</button>
+      <button type="button" class="btn rounded-pill btn-red">
+        Free Consultation
+      </button>
     </div>
 
     <div>
@@ -66,18 +74,26 @@
       <p>Carousel</p>
     </div>
 
-    <div class="p-3 text-center">
-      <h2>Book a call with me</h2>
-      <p>
-        I’d love to have a chat to see how I can help you. The best first step
-        is for us to discuss your project during a free consultation. Then we
-        can move forward from there.
-      </p>
-      <button>Free Consultation</button>
+    <div class="p-3">
+      <div class="rounded text-center p-4" id="booking-div">
+        <h2>Book a call with me</h2>
+        <p>
+          I’d love to have a chat to see how I can help you. The best first step
+          is for us to discuss your project during a free consultation. Then we
+          can move forward from there.
+        </p>
+        <button type="button" class="btn rounded-pill btn-red">
+          Free Consultation
+        </button>
+      </div>
     </div>
 
-    <footer class="bg-primary p-3">
-      <button>Free Consultation</button>
+    <footer class="bg-primary p-3 d-flex justify-content-between">
+      <img src="assets/logo.svg" />
+
+      <button type="button" class="btn rounded-pill btn-black">
+        Free Consultation
+      </button>
     </footer>
 
     <script src="./bootstrap-5.3.2-dist//js/bootstrap.bundle.min.js"></script>
