--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="./bootstrap-5.3.2-dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,8 +27,8 @@
   </head>
 
   <body>
-    <nav class="bg-primary p-3 d-flex justify-content-between">
-      <img src="assets/logo.svg" />
+    <nav class="p-3 d-flex justify-content-between align-items-center">
+      <img src="assets/logo.svg" class="site-logo" />
       <button type="button" class="btn rounded-pill btn-black">
         Free Consultation
       </button>
@@ -36,23 +41,23 @@
       </p>
     </header>
 
-    <div class="p-3">
-      <div class="skill-div p-3 rounded text-white" id="skill-1">
+    <div class="p-3 d-flex flex-column gap-3">
+      <div class="skill-div d-flex p-3 rounded text-white" id="skill-1">
         <h2>Graphic Design</h2>
       </div>
-      <div class="skill-div p-3 rounded text-white" id="skill-2">
+      <div class="skill-div d-flex p-3 rounded text-white" id="skill-2">
         <h2>UI/UX</h2>
       </div>
-      <div class="skill-div p-3 rounded text-white" id="skill-3">
+      <div class="skill-div d-flex p-3 rounded text-white" id="skill-3">
         <h2>Apps</h2>
       </div>
-      <div class="skill-div p-3 rounded text-white" id="skill-4">
+      <div class="skill-div d-flex p-3 rounded text-white" id="skill-4">
         <h2>Photography</h2>
       </div>
-      <div class="skill-div p-3 rounded text-white" id="skill-5">
+      <div class="skill-div d-flex p-3 rounded text-white" id="skill-5">
         <h2>Illustrations</h2>
       </div>
-      <div class="skill-div p-3 rounded text-white" id="skill-6">
+      <div class="skill-div d-flex p-3 rounded text-white" id="skill-6">
         <h2>Motion Graphics</h2>
       </div>
     </div>
@@ -88,8 +93,8 @@
       </div>
     </div>
 
-    <footer class="bg-primary p-3 d-flex justify-content-between">
-      <img src="assets/logo.svg" />
+    <footer class="p-3 d-flex justify-content-between align-items-center">
+      <img src="assets/logo.svg" class="site-logo" />
 
       <button type="button" class="btn rounded-pill btn-black">
         Free Consultation
