--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
   </head>
 
   <body>
-    <nav class="p-3 d-flex justify-content-between align-items-center">
+    <nav>
       <img src="assets/logo.svg" class="site-logo" />
-      <button type="button" class="btn rounded-pill btn-black">
-        Free Consultation
-      </button>
+      <button type="button" class="btn btn-black">Free Consultation</button>
     </nav>
-    <header class="p-3 text-center">
+    <header>
       <h1>Design solutions made easy</h1>
       <p>
         With over ten years of experience in various design disciplines, I’m
@@ -41,64 +39,58 @@
       </p>
     </header>
 
-    <div class="p-3 d-flex flex-column gap-3">
-      <div class="skill-div d-flex p-3 rounded text-white" id="skill-1">
+    <section id="skills-section">
+      <div class="skill-div" id="skill-1">
         <h2>Graphic Design</h2>
       </div>
-      <div class="skill-div d-flex p-3 rounded text-white" id="skill-2">
+      <div class="skill-div" id="skill-2">
         <h2>UI/UX</h2>
       </div>
-      <div class="skill-div d-flex p-3 rounded text-white" id="skill-3">
+      <div class="skill-div" id="skill-3">
         <h2>Apps</h2>
       </div>
-      <div class="skill-div d-flex p-3 rounded text-white" id="skill-4">
+      <div class="skill-div" id="skill-4">
         <h2>Photography</h2>
       </div>
-      <div class="skill-div d-flex p-3 rounded text-white" id="skill-5">
+      <div class="skill-div" id="skill-5">
         <h2>Illustrations</h2>
       </div>
-      <div class="skill-div d-flex p-3 rounded text-white" id="skill-6">
+      <div class="skill-div" id="skill-6">
         <h2>Motion Graphics</h2>
       </div>
-    </div>
+    </section>
 
-    <div class="p-3 text-center">
+    <section id="about-section">
       <h2>I’m Amy, and I’d love to work on your next project</h2>
       <p>
         I love working with others to create beautiful design solutions. I’ve
         designed everything from brand illustrations to complete mobile apps.
         I’m also handy with a camera!
       </p>
-      <button type="button" class="btn rounded-pill btn-red">
-        Free Consultation
-      </button>
-    </div>
+      <button type="button" class="btn btn-red">Free Consultation</button>
+    </section>
 
-    <div>
-      <h2 class="p-3 text-center">My Work</h2>
+    <section id="work-section">
+      <h2>My Work</h2>
       <p>Carousel</p>
-    </div>
+    </section>
 
-    <div class="p-3">
-      <div class="rounded text-center p-4" id="booking-div">
+    <section id="booking-section">
+      <div id="booking-div">
         <h2>Book a call with me</h2>
         <p>
           I’d love to have a chat to see how I can help you. The best first step
           is for us to discuss your project during a free consultation. Then we
           can move forward from there.
         </p>
-        <button type="button" class="btn rounded-pill btn-red">
-          Free Consultation
-        </button>
+        <button type="button" class="btn btn-red">Free Consultation</button>
       </div>
-    </div>
+    </section>
 
-    <footer class="p-3 d-flex justify-content-between align-items-center">
+    <footer>
       <img src="assets/logo.svg" class="site-logo" />
 
-      <button type="button" class="btn rounded-pill btn-black">
-        Free Consultation
-      </button>
+      <button type="button" class="btn btn-black">Free Consultation</button>
     </footer>
 
     <script src="./bootstrap-5.3.2-dist//js/bootstrap.bundle.min.js"></script>
