--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </section>
 
     <section id="about-section">
+      <img src="assets/image-amy.webp" class="about-image" />
       <h2>I’m Amy, and I’d love to work on your next project</h2>
       <p>
         I love working with others to create beautiful design solutions. I’ve
@@ -72,7 +73,69 @@
 
     <section id="work-section">
       <h2>My Work</h2>
-      <p>Carousel</p>
+      <!-- <p>Carousel</p> -->
+
+      <!-- Carousel Start -->
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item">
+            <img
+              src="assets/image-slide-1.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="assets/image-slide-2.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item active">
+            <img
+              src="assets/image-slide-3.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="assets/image-slide-4.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="assets/image-slide-5.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+        </div>
+        <div class="carousel-control-wrapper">
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <!-- Carousel End -->
     </section>
 
     <section id="booking-section">
