skill image accents

--- a/index.html
+++ b/index.html
@@ -41,21 +41,27 @@
 
     <section id="skills-section">
       <div class="skill-div" id="skill-1">
+        <img src="assets/pattern-graphic-design.svg" class="skill-image" />
         <h2>Graphic Design</h2>
       </div>
       <div class="skill-div" id="skill-2">
+        <img src="assets/pattern-ui-ux.svg" class="skill-image" />
         <h2>UI/UX</h2>
       </div>
       <div class="skill-div" id="skill-3">
+        <img src="assets/pattern-apps.svg" class="skill-image" />
         <h2>Apps</h2>
       </div>
       <div class="skill-div" id="skill-4">
+        <img src="assets/pattern-photography.svg" class="skill-image" />
         <h2>Photography</h2>
       </div>
       <div class="skill-div" id="skill-5">
+        <img src="assets/pattern-illustrations.svg" class="skill-image" />
         <h2>Illustrations</h2>
       </div>
       <div class="skill-div" id="skill-6">
+        <img src="assets/pattern-motion-graphics.svg" class="skill-image" />
         <h2>Motion Graphics</h2>
       </div>
     </section>
