--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <!-- <p>Carousel</p> -->
 
       <!-- Carousel Start -->
-      <div id="carouselExample" class="carousel slide">
+      <div id="carouselWork" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item">
             <img
@@ -124,7 +124,7 @@
           <button
             class="carousel-control-prev"
             type="button"
-            data-bs-target="#carouselExample"
+            data-bs-target="#carouselWork"
             data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -133,7 +133,7 @@
           <button
             class="carousel-control-next"
             type="button"
-            data-bs-target="#carouselExample"
+            data-bs-target="#carouselWork"
             data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
