--- a/index.html
+++ b/index.html
@@ -66,15 +66,19 @@
       </div>
     </section>
 
-    <section id="about-section">
-      <img src="assets/image-amy.webp" class="about-image" />
-      <h2>I’m Amy, and I’d love to work on your next project</h2>
-      <p>
-        I love working with others to create beautiful design solutions. I’ve
-        designed everything from brand illustrations to complete mobile apps.
-        I’m also handy with a camera!
-      </p>
-      <button type="button" class="btn btn-red">Free Consultation</button>
+    <section id="about-section" class="row text-center text-md-start">
+      <div class="col-md-6">
+        <img src="assets/image-amy.webp" class="about-image mb-md-0" />
+      </div>
+      <div class="col-md-6">
+        <h2>I’m Amy, and I’d love to work on your next project</h2>
+        <p>
+          I love working with others to create beautiful design solutions. I’ve
+          designed everything from brand illustrations to complete mobile apps.
+          I’m also handy with a camera!
+        </p>
+        <button type="button" class="btn btn-red">Free Consultation</button>
+      </div>
     </section>
 
     <section id="work-section">
