--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button type="button" class="btn btn-black">Free Consultation</button>
     </nav>
     <header>
-      <h1>Design solutions made easy</h1>
+      <h1 class="heading-lg">Design solutions made easy</h1>
       <p>
         With over ten years of experience in various design disciplines, I’m
         your one-stop shop for your design needs.
@@ -67,11 +67,13 @@
     </section>
 
     <section id="about-section" class="row text-center text-md-start">
-      <div class="col-md-6">
+      <div class="col-md-6 p-0">
         <img src="assets/image-amy.webp" class="about-image mb-md-0" />
       </div>
-      <div class="col-md-6">
-        <h2>I’m Amy, and I’d love to work on your next project</h2>
+      <div class="col-md-6 p-0">
+        <h2 class="heading-md">
+          I’m Amy, and I’d love to work on your next project
+        </h2>
         <p>
           I love working with others to create beautiful design solutions. I’ve
           designed everything from brand illustrations to complete mobile apps.
@@ -82,7 +84,7 @@
     </section>
 
     <section id="work-section">
-      <h2>My Work</h2>
+      <h2 class="heading-sm">My Work</h2>
       <!-- <p>Carousel</p> -->
 
       <!-- Carousel Start -->
@@ -150,7 +152,7 @@
 
     <section id="booking-section">
       <div id="booking-div">
-        <h2>Book a call with me</h2>
+        <h2 class="heading-md">Book a call with me</h2>
         <p>
           I’d love to have a chat to see how I can help you. The best first step
           is for us to discuss your project during a free consultation. Then we
