--- a/index.html
+++ b/index.html
@@ -152,13 +152,17 @@
 
     <section id="booking-section">
       <div id="booking-div">
-        <h2 class="heading-md">Book a call with me</h2>
-        <p>
-          I’d love to have a chat to see how I can help you. The best first step
-          is for us to discuss your project during a free consultation. Then we
-          can move forward from there.
-        </p>
-        <button type="button" class="btn btn-red">Free Consultation</button>
+        <div>
+          <h2 class="heading-md">Book a call with me</h2>
+          <p>
+            I’d love to have a chat to see how I can help you. The best first
+            step is for us to discuss your project during a free consultation.
+            Then we can move forward from there.
+          </p>
+        </div>
+        <div>
+          <button type="button" class="btn btn-red">Free Consultation</button>
+        </div>
       </div>
     </section>
 
