--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
       </div>
     </section>
 
-    <section id="about-section" class="row text-center text-md-start">
+    <section
+      id="about-section"
+      class="row text-center text-md-start justify-between"
+    >
       <div class="col-md-6 p-0">
         <img src="assets/image-amy.webp" class="about-image mb-md-0" />
       </div>
