--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
 
     <section
       id="about-section"
-      class="row text-center text-md-start justify-between"
+      class="row text-center text-md-start justify-between align-items-center"
     >
-      <div class="col-md-6 p-0">
+      <div
+        class="col-md-6 p-0 d-flex justify-content-center justify-content-md-start"
+      >
         <img src="assets/image-amy.webp" class="about-image mb-md-0" />
       </div>
       <div class="col-md-6 p-0">
