--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
       class="row text-center text-md-start justify-between align-items-center"
     >
       <div
-        class="col-md-6 p-0 d-flex justify-content-center justify-content-md-start"
+        class="col-md-5 p-0 d-flex justify-content-center justify-content-md-end justify-content-xl-start"
       >
         <img src="assets/image-amy.webp" class="about-image mb-md-0" />
       </div>
+      <div class="col-0 col-md-1"></div>
       <div class="col-md-6 p-0">
         <h2 class="heading-md">
           I’m Amy, and I’d love to work on your next project
