--- a/index.html
+++ b/index.html
@@ -73,12 +73,17 @@
     </section>
 
     <section id="about-section" class="row justify-between align-items-center">
+      <!-- Image -->
       <div
         class="col-md-5 p-0 d-flex justify-content-center justify-content-md-end justify-content-xl-start"
       >
         <img src="assets/image-amy.webp" class="about-image mb-md-0" />
       </div>
+
+      <!-- Spacer -->
       <div class="col-1"></div>
+
+      <!-- Text -->
       <div class="col-md-6 p-0 text-center text-md-start">
         <h2 class="heading-md">
           I’m Amy, and I’d love to work on your next project
