--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
           <img src="assets/image-slide-5.jpg" alt="..." />
         </div>
       </div>
+      <div class="slider-arrow-wrapper">
+        <button class="slider-arrow-prev">
+          <img src="assets/icon-arrow-left.svg" class="slider-arrow-icon" />
+        </button>
+        <button class="slider-arrow-next">
+          <img src="assets/icon-arrow-right.svg" class="slider-arrow-icon" />
+        </button>
+      </div>
     </section>
 
     <section id="booking-section">
