--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </section>
 
-    <section id="about-section" class="row justify-between align-items-center">
+    <section id="about-section">
       <!-- Image -->
       <div
         class="col-md-5 p-0 d-flex justify-content-center justify-content-md-end justify-content-xl-start"
