--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
 
+    <link href="reset.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
 
     <link
@@ -77,7 +78,7 @@
       <div
         class="col-md-5 p-0 d-flex justify-content-center justify-content-md-end justify-content-xl-start"
       >
-        <img src="assets/image-amy.webp" class="about-image mb-md-0" />
+        <img src="assets/image-amy.webp" class="about-image" />
       </div>
 
       <!-- Spacer -->
