--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       href="./bootstrap-5.3.2-dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
+    /> -->
 
     <link href="reset.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
@@ -75,17 +75,12 @@
 
     <section id="about-section">
       <!-- Image -->
-      <div
-        class="col-md-5 p-0 d-flex justify-content-center justify-content-md-end justify-content-xl-start"
-      >
+      <div id="aboutImageDiv">
         <img src="assets/image-amy.webp" class="about-image" />
       </div>
 
-      <!-- Spacer -->
-      <div class="col-1"></div>
-
       <!-- Text -->
-      <div class="col-md-6 p-0 text-center text-md-start">
+      <div id="aboutContentDiv">
         <h2 class="heading-md">
           I’m Amy, and I’d love to work on your next project
         </h2>
@@ -158,6 +153,6 @@
 
     <script src="./slider.js"></script>
 
-    <script src="./bootstrap-5.3.2-dist//js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="./bootstrap-5.3.2-dist//js/bootstrap.bundle.min.js"></script> -->
   </body>
 </html>
