--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <body>
     <nav>
-      <img src="assets/logo.svg" class="site-logo" />
+      <img src="assets/logo.svg" class="site-logo" alt="" />
       <button type="button" class="btn btn-black">Free Consultation</button>
     </nav>
     <header>
@@ -44,27 +44,39 @@
 
     <section id="skills-section">
       <div class="skill-div" id="skill-1">
-        <img src="assets/pattern-graphic-design.svg" class="skill-image" />
+        <img
+          src="assets/pattern-graphic-design.svg"
+          class="skill-image"
+          alt=""
+        />
         <h2>Graphic Design</h2>
       </div>
       <div class="skill-div" id="skill-2">
-        <img src="assets/pattern-ui-ux.svg" class="skill-image" />
+        <img src="assets/pattern-ui-ux.svg" class="skill-image" alt="" />
         <h2>UI/UX</h2>
       </div>
       <div class="skill-div" id="skill-3">
-        <img src="assets/pattern-apps.svg" class="skill-image" />
+        <img src="assets/pattern-apps.svg" class="skill-image" alt="" />
         <h2>Apps</h2>
       </div>
       <div class="skill-div" id="skill-4">
-        <img src="assets/pattern-photography.svg" class="skill-image" />
+        <img src="assets/pattern-photography.svg" class="skill-image" alt="" />
         <h2>Illustrations</h2>
       </div>
       <div class="skill-div" id="skill-5">
-        <img src="assets/pattern-illustrations.svg" class="skill-image" />
+        <img
+          src="assets/pattern-illustrations.svg"
+          class="skill-image"
+          alt=""
+        />
         <h2>Photography</h2>
       </div>
       <div class="skill-div" id="skill-6">
-        <img src="assets/pattern-motion-graphics.svg" class="skill-image" />
+        <img
+          src="assets/pattern-motion-graphics.svg"
+          class="skill-image"
+          alt=""
+        />
         <h2>Motion Graphics</h2>
       </div>
     </section>
@@ -72,7 +84,7 @@
     <section id="about-section">
       <!-- Image -->
       <div id="aboutImageDiv">
-        <img src="assets/image-amy.webp" class="about-image" />
+        <img src="assets/image-amy.webp" class="about-image" alt="Amy" />
       </div>
 
       <!-- Text -->
