--- a/index.html
+++ b/index.html
@@ -123,10 +123,18 @@
       </div>
       <div class="slider-arrow-wrapper">
         <button class="slider-arrow-prev">
-          <img src="assets/icon-arrow-left.svg" class="slider-arrow-icon" />
+          <img
+            src="assets/icon-arrow-left.svg"
+            class="slider-arrow-icon"
+            alt="Previous Slide"
+          />
         </button>
         <button class="slider-arrow-next">
-          <img src="assets/icon-arrow-right.svg" class="slider-arrow-icon" />
+          <img
+            src="assets/icon-arrow-right.svg"
+            class="slider-arrow-icon"
+            alt="Next Slide"
+          />
         </button>
       </div>
     </section>
@@ -148,7 +156,7 @@
     </section>
 
     <footer>
-      <img src="assets/logo.svg" class="site-logo" />
+      <img src="assets/logo.svg" class="site-logo" alt="" />
       <button type="button" class="btn btn-black">Free Consultation</button>
     </footer>
 
