--- a/index.html
+++ b/index.html
@@ -30,132 +30,137 @@
   </head>
 
   <body>
-    <nav>
+    <nav role="navigation">
       <img src="assets/logo.svg" class="site-logo" alt="" />
       <button type="button" class="btn btn-black">Free Consultation</button>
     </nav>
-    <header>
+    <header role="banner">
       <h1 class="heading-lg">Design solutions made easy</h1>
       <p>
         With over ten years of experience in various design disciplines, I’m
         your one-stop shop for your design needs.
       </p>
     </header>
-
-    <section id="skills-section">
-      <div class="skill-div" id="skill-1">
-        <img
-          src="assets/pattern-graphic-design.svg"
-          class="skill-image"
-          alt=""
-        />
-        <h2>Graphic Design</h2>
-      </div>
-      <div class="skill-div" id="skill-2">
-        <img src="assets/pattern-ui-ux.svg" class="skill-image" alt="" />
-        <h2>UI/UX</h2>
-      </div>
-      <div class="skill-div" id="skill-3">
-        <img src="assets/pattern-apps.svg" class="skill-image" alt="" />
-        <h2>Apps</h2>
-      </div>
-      <div class="skill-div" id="skill-4">
-        <img src="assets/pattern-photography.svg" class="skill-image" alt="" />
-        <h2>Illustrations</h2>
-      </div>
-      <div class="skill-div" id="skill-5">
-        <img
-          src="assets/pattern-illustrations.svg"
-          class="skill-image"
-          alt=""
-        />
-        <h2>Photography</h2>
-      </div>
-      <div class="skill-div" id="skill-6">
-        <img
-          src="assets/pattern-motion-graphics.svg"
-          class="skill-image"
-          alt=""
-        />
-        <h2>Motion Graphics</h2>
-      </div>
-    </section>
-
-    <section id="about-section">
-      <!-- Image -->
-      <div id="aboutImageDiv">
-        <img src="assets/image-amy.webp" class="about-image" alt="Amy" />
-      </div>
-
-      <!-- Text -->
-      <div id="aboutContentDiv">
-        <h2 class="heading-md">
-          I’m Amy, and I’d love to work on your next project
-        </h2>
-        <p>
-          I love working with others to create beautiful design solutions. I’ve
-          designed everything from brand illustrations to complete mobile apps.
-          I’m also handy with a camera!
-        </p>
-        <button type="button" class="btn btn-red">Free Consultation</button>
-      </div>
-    </section>
-
-    <section id="work-section">
-      <h2 class="heading-sm">My Work</h2>
-
-      <div class="work-carousel">
-        <div>
-          <img src="assets/image-slide-1.jpg" alt="..." />
-        </div>
-        <div>
-          <img src="assets/image-slide-2.jpg" alt="..." />
-        </div>
-        <div>
-          <img src="assets/image-slide-3.jpg" alt="..." />
-        </div>
-        <div>
-          <img src="assets/image-slide-4.jpg" alt="..." />
-        </div>
-        <div>
-          <img src="assets/image-slide-5.jpg" alt="..." />
-        </div>
-      </div>
-      <div class="slider-arrow-wrapper">
-        <button class="slider-arrow-prev">
+    <main role="main">
+      <section id="skills-section">
+        <div class="skill-div" id="skill-1">
           <img
-            src="assets/icon-arrow-left.svg"
-            class="slider-arrow-icon"
-            alt="Previous Slide"
+            src="assets/pattern-graphic-design.svg"
+            class="skill-image"
+            alt=""
           />
-        </button>
-        <button class="slider-arrow-next">
+          <h2>Graphic Design</h2>
+        </div>
+        <div class="skill-div" id="skill-2">
+          <img src="assets/pattern-ui-ux.svg" class="skill-image" alt="" />
+          <h2>UI/UX</h2>
+        </div>
+        <div class="skill-div" id="skill-3">
+          <img src="assets/pattern-apps.svg" class="skill-image" alt="" />
+          <h2>Apps</h2>
+        </div>
+        <div class="skill-div" id="skill-4">
           <img
-            src="assets/icon-arrow-right.svg"
-            class="slider-arrow-icon"
-            alt="Next Slide"
+            src="assets/pattern-photography.svg"
+            class="skill-image"
+            alt=""
           />
-        </button>
-      </div>
-    </section>
+          <h2>Illustrations</h2>
+        </div>
+        <div class="skill-div" id="skill-5">
+          <img
+            src="assets/pattern-illustrations.svg"
+            class="skill-image"
+            alt=""
+          />
+          <h2>Photography</h2>
+        </div>
+        <div class="skill-div" id="skill-6">
+          <img
+            src="assets/pattern-motion-graphics.svg"
+            class="skill-image"
+            alt=""
+          />
+          <h2>Motion Graphics</h2>
+        </div>
+      </section>
 
-    <section id="booking-section">
-      <div id="booking-div">
-        <div>
-          <h2 class="heading-md">Book a call with me</h2>
+      <section id="about-section">
+        <!-- Image -->
+        <div id="aboutImageDiv">
+          <img src="assets/image-amy.webp" class="about-image" alt="Amy" />
+        </div>
+
+        <!-- Text -->
+        <div id="aboutContentDiv">
+          <h2 class="heading-md">
+            I’m Amy, and I’d love to work on your next project
+          </h2>
           <p>
-            I’d love to have a chat to see how I can help you. The best first
-            step is for us to discuss your project during a free consultation.
-            Then we can move forward from there.
+            I love working with others to create beautiful design solutions.
+            I’ve designed everything from brand illustrations to complete mobile
+            apps. I’m also handy with a camera!
           </p>
-        </div>
-        <div>
           <button type="button" class="btn btn-red">Free Consultation</button>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <footer>
+      <section id="work-section">
+        <h2 class="heading-sm">My Work</h2>
+
+        <div class="work-carousel">
+          <div>
+            <img src="assets/image-slide-1.jpg" alt="..." />
+          </div>
+          <div>
+            <img src="assets/image-slide-2.jpg" alt="..." />
+          </div>
+          <div>
+            <img src="assets/image-slide-3.jpg" alt="..." />
+          </div>
+          <div>
+            <img src="assets/image-slide-4.jpg" alt="..." />
+          </div>
+          <div>
+            <img src="assets/image-slide-5.jpg" alt="..." />
+          </div>
+        </div>
+        <div class="slider-arrow-wrapper">
+          <button class="slider-arrow-prev">
+            <img
+              src="assets/icon-arrow-left.svg"
+              class="slider-arrow-icon"
+              alt="Previous Slide"
+            />
+          </button>
+          <button class="slider-arrow-next">
+            <img
+              src="assets/icon-arrow-right.svg"
+              class="slider-arrow-icon"
+              alt="Next Slide"
+            />
+          </button>
+        </div>
+      </section>
+
+      <section id="booking-section">
+        <div id="booking-div">
+          <div>
+            <h2 class="heading-md">Book a call with me</h2>
+            <p>
+              I’d love to have a chat to see how I can help you. The best first
+              step is for us to discuss your project during a free consultation.
+              Then we can move forward from there.
+            </p>
+          </div>
+          <div>
+            <button type="button" class="btn btn-red">Free Consultation</button>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer role="contentinfo">
       <img src="assets/logo.svg" class="site-logo" alt="" />
       <button type="button" class="btn btn-black">Free Consultation</button>
     </footer>
