--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </p>
     </header>
     <main role="main">
-      <section id="skills-section">
+      <section class="skills-section" id="skills">
         <div class="skill-div" id="skill-1">
           <img
             src="assets/pattern-graphic-design.svg"
@@ -85,14 +85,14 @@
         </div>
       </section>
 
-      <section id="about-section">
+      <section class="about-section" id="about">
         <!-- Image -->
-        <div id="aboutImageDiv">
+        <div class="about-image-div">
           <img src="assets/image-amy.webp" class="about-image" alt="Amy" />
         </div>
 
         <!-- Text -->
-        <div id="aboutContentDiv">
+        <div class="about-content-div">
           <h2 class="heading-md">
             I’m Amy, and I’d love to work on your next project
           </h2>
@@ -105,8 +105,8 @@
         </div>
       </section>
 
-      <section id="work-section">
-        <h2 class="heading-sm">My Work</h2>
+      <section class="work-section" id="work">
+        <h2 class="heading-sm work-section-heading">My Work</h2>
 
         <div class="work-carousel">
           <div>
@@ -143,8 +143,8 @@
         </div>
       </section>
 
-      <section id="booking-section">
-        <div id="booking-div">
+      <section class="booking-section" id="booking">
+        <div class="booking-div">
           <div>
             <h2 class="heading-md">Book a call with me</h2>
             <p>
